--- a/iosApp/iosApp/Base.lproj/Main.storyboard
+++ b/iosApp/iosApp/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,19 +18,46 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cak-wb-syn">
-                                <rect key="frame" x="113" y="120" width="216" height="193"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KaO-mK-Vgj">
+                                <rect key="frame" x="87.5" y="328.5" width="200" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="0lR-jZ-tuj"/>
+                                    <constraint firstAttribute="height" constant="30" id="9mK-vA-5yu"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TJR-RB-oLp">
+                                <rect key="frame" x="164.5" y="386" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="clickSubmitButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Jop-jw-XW1"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LiM-2s-Tw1">
+                                <rect key="frame" x="166.5" y="277" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="LiM-2s-Tw1" firstAttribute="centerX" secondItem="KaO-mK-Vgj" secondAttribute="centerX" id="1l8-Sm-46P"/>
+                            <constraint firstItem="LiM-2s-Tw1" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="27a-b5-3ND"/>
+                            <constraint firstItem="TJR-RB-oLp" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="O1K-z4-Xo8"/>
+                            <constraint firstItem="TJR-RB-oLp" firstAttribute="top" secondItem="KaO-mK-Vgj" secondAttribute="bottom" constant="27.5" id="RoO-kA-KKe"/>
+                            <constraint firstItem="KaO-mK-Vgj" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="WCX-vK-eHn"/>
+                            <constraint firstItem="KaO-mK-Vgj" firstAttribute="top" secondItem="LiM-2s-Tw1" secondAttribute="bottom" constant="30.5" id="lPz-tC-Ulm"/>
+                            <constraint firstItem="TJR-RB-oLp" firstAttribute="centerX" secondItem="KaO-mK-Vgj" secondAttribute="centerX" id="lqh-PY-QVb"/>
+                            <constraint firstItem="KaO-mK-Vgj" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="yTy-xF-7Qn"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="label" destination="Cak-wb-syn" id="pzW-Xf-pbM"/>
+                        <outlet property="editText" destination="KaO-mK-Vgj" id="XQz-Il-5Xo"/>
+                        <outlet property="textView" destination="LiM-2s-Tw1" id="02E-Xv-s9j"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
